[package]
name = "adventofcode2019"
version = "0.1.0"
authors = ["Johan Olsson <kurnos@gmail.com>"]
edition = "2018"

[dependencies.rayon]
version = "1.2.1"

[dependencies.petgraph]
version = "0.4.13"

[dependencies.itertools]
version = "0.8.2"

[dependencies.num]
version = "0.2.0"

[dependencies.clipboard-win]
version = "2.2.0"